yaml/db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: transactiondb-pod
  labels:
    app: transactiondb
spec:
  containers:
  - name: transactiondb-container
    image: postgres
    ports:
    - containerPort: 5432
