yaml/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-routine-api-service
  namespace: transaction-routine-api
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 5000
  selector:
    app: transaction-routine-api
