yaml/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transactiondb-service
spec:
  type: LoadBalancer
  ports:
    - port: 5432
  selector:
    app: transactiondb
