yaml/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  namespace: transaction-routine-api
spec:
  rules:
  - http:    
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: transaction-routine-api-service
            port:
              number: 80
